fixes: sidebar showing right border on tablet and desktop

--- a/src/projects/invoice/styles.css
+++ b/src/projects/invoice/styles.css
@@ -320,7 +320,9 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 1.5rem 1rem;
+  padding: 1rem;
+  height: 90vh;
+  overflow-y: scroll;
 }
 
 /* side bar */
@@ -592,7 +594,7 @@ input[type='date' i]::-webkit-calendar-picker-indicator {
     justify-content: space-between;
     align-items: center;
     width: 103px;
-    min-height: 100vh;
+    height: 100vh;
     background-color: var(--invoice-sidebar-color);
     z-index: 6;
     border-radius: 0 1rem 1rem 0;
@@ -623,6 +625,7 @@ input[type='date' i]::-webkit-calendar-picker-indicator {
     align-items: center;
     width: 100%;
     border-bottom: 2px solid #494e6e;
+    border-right: 0;
     padding: 1rem 0;
   }
 
@@ -651,6 +654,7 @@ input[type='date' i]::-webkit-calendar-picker-indicator {
 
   .invoice-card__status__wrapper {
     order: 5;
+    padding: 0;
   }
 
   .invoice-card-chevron {
